# Ai-Prescription-Reader

./: README.md  requirements.txt
backend/: config.py  database.py  main.py  test.py
backend/ai/: medicine_extractor.py  ocr_engine.py
backend/ai-services/: .env  .gitignore  gemini.py  interaction_service.py  main.py  ocr_service.py  preprocessing.py  pyproject.toml  rag_service.py  requirements.txt  validation.py
backend/ai-services/core/: config.py
backend/ai-services/models/: response_model.py
backend/ai-services/services/: correction_service.py  medicine_db.json  medicine_db_service.py  medicine_map.py  ocr_service.py  parser_service.py  preprocess_service.py
backend/ai/models/: prescription_model.py
backend/ai/services/: ai_explainer.py  image_processing.py  prescription.py
backend/ai_services/: .gitignore  gemini.py  main.py  ocr_service.py  pyproject.toml  rag_service.py  requirements.txt  rules_engine.py  validation.py
backend/ai_services/data/: medical_database.json
backend/node-auth/: .gitignore  package.json  server.js
backend/node-auth/config/: db.js
backend/node-auth/data/: medicines.json
backend/node-auth/middleware/: auth.js
backend/node-auth/models/: Correction.js  Scan.js  User.js
backend/node-auth/routes/: auth.js  scan.js
backend/node-auth/utils/: validateMedicine.js
backend/routes/: prescription.py
data/: medicines.csv
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ProtectedRoute.jsx
frontend/src/context/: UserContext.jsx
(+23 files in other folders)
